samples/_failures_safe/1761453505_f112d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efcd54be.c:145: error: expected ‘;’, ‘,’ or ‘)’ at end of input
